--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -4,6 +4,7 @@ body {
   background: black;
   /* font-family: "Codystar", cursive; */
   font-family: "Special Elite", cursive;
+  /* font-family: "Itim", cursive; */
   font-size: large;
 }
 
