--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -12,7 +12,7 @@ h1, h2, h3, h4, h5, label {
   font-family: "Special Elite", cursive;
 }
 
-.font {
+.font, input, textarea {
   font-family: "Montserrat";
 }
 
