More work on this badie

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -8,7 +8,7 @@ body {
   font-size: larger;
 }
 
-h1, h2, h3, h4, h5, label {
+h1, h2, h3, h4, h5, label, nav {
   font-family: "Special Elite", cursive;
 }
 
